--- a/config/nginx-config/nginx.conf
+++ b/config/nginx-config/nginx.conf
@@ -5,7 +5,7 @@
 # setup. If you do find yourself altering something here, you may want
 # to consider discussing it at the repo so we can share in your findings
 
-user              www-data;
+user              nginx;
 worker_processes  4;
 error_log         /var/log/nginx/error.log;
 pid               /var/run/nginx.pid;
@@ -16,7 +16,9 @@ events {
 
 http {
     include     /etc/nginx/mime.types;
-    access_log  /var/log/nginx/access.log;
+    default_type    application/octet-stream;
+
+    access_log  /var/log/nginx/access.log main;
 
     # See - http://jeremyfelt.com/code/2013/01/08/clear-nginx-cache-in-vagrant/
     #
@@ -25,26 +27,28 @@ http {
     # that create syntax errors and weird encoding issues in CSS that make it seem
     # like your file has been cached forever. Crazy stuff - so off it is.
     sendfile            off;
+    # PRODUCTION
+    sendfile             on;
 
-    tcp_nopush          on;
-    keepalive_timeout   5;
-    tcp_nodelay         on;
-    server_tokens       off;
+    #tcp_nopush          on;
+    keepalive_timeout   65;
+    #tcp_nodelay         on;
+    #server_tokens       off;
 
-    client_body_buffer_size 16k;
-    client_header_buffer_size 16k;
-    client_max_body_size 50M;
-    large_client_header_buffers 4 16k;
+    #client_body_buffer_size 16k;
+    #client_header_buffer_size 16k;
+    #client_max_body_size 50M;
+    #large_client_header_buffers 4 16k;
 
     gzip          on;
-    gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    gzip_disable  "MSIE [1-6]\.(?!.*SV1)";
+    #gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    #gzip_disable  "MSIE [1-6]\.(?!.*SV1)";
 
     # Upstream to abstract backend connection(s) for PHP.
-    upstream php {
-           server unix:/var/run/php5-fpm.sock;
-    }
+    #upstream php {
+    #       server unix:/var/run/php5-fpm.sock;
+    #}
 
-    include /etc/nginx/sites-enabled/*.conf;
+    include /etc/nginx/conf.d/*.conf;
 
 }
