--- a/config/nginx-config/nginx.conf
+++ b/config/nginx-config/nginx.conf
@@ -5,50 +5,104 @@
 # setup. If you do find yourself altering something here, you may want
 # to consider discussing it at the repo so we can share in your findings
 
-user              nginx;
-worker_processes  4;
-error_log         /var/log/nginx/error.log;
-pid               /var/run/nginx.pid;
+# User to run nginx as
+user    www-data;
 
+# Default to number of CPU cores available
+worker_processes  auto;
+
+# Default error log file
+error_log   /var/log/nginx/error.log;
+
+# Nginx process identifier
+pid     /var/run/nginx.pid;
+
+# The EventsModule controls how Nginx deals with connections
 events {
-    worker_connections  2048;
+    # max clients = worker_processes (CPUs) * worker_connections
+    worker_connections  2000;
 }
 
+# The HttpCoreModule controls core features of Nginx's HTTP processing
 http {
-    include     /etc/nginx/mime.types;
-    default_type    application/octet-stream;
 
-    access_log  /var/log/nginx/access.log main;
+    # Define MIME types for files
+    include      /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # See - http://jeremyfelt.com/code/2013/01/08/clear-nginx-cache-in-vagrant/
-    #
-    # The nginx default for sendfile is on, which appears to not jive with something
-    # about the VM for some things, causing weird encoding issues in Javascript
-    # that create syntax errors and weird encoding issues in CSS that make it seem
-    # like your file has been cached forever. Crazy stuff - so off it is.
-    sendfile            off;
-    # PRODUCTION
-    sendfile             on;
+    # Default log file
+    access_log  /var/log/nginx/access.log;
 
-    #tcp_nopush          on;
-    keepalive_timeout   65;
-    #tcp_nodelay         on;
-    #server_tokens       off;
+    # Turn sendfile off in a virtual machine because of issues
+    sendfile off;
+    # In production, sendfile should be on
+    # sendfile on;
 
-    #client_body_buffer_size 16k;
-    #client_header_buffer_size 16k;
-    #client_max_body_size 50M;
-    #large_client_header_buffers 4 16k;
+    # Don't send out partial TCP frames
+    tcp_nopush          on;
 
+    # Merge smaller TCP packets into one larger packet
+    tcp_nodelay        off;
+
+    # How long each connection should stay idle
+    keepalive_timeout   5;
+
+    # Hide nginx version information
+    server_tokens       off;
+
+    # Enable Gzip compression
     gzip          on;
-    #gzip_types text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    #gzip_disable  "MSIE [1-6]\.(?!.*SV1)";
+
+    # Compression level (1-9)
+    gzip_comp_level     5;
+
+    # Don't compress anything under 256 bytes
+    gzip_min_length     256;
+
+    # Compress output of these MIME-types
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/rss+xml
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/svg+xml
+        image/x-icon
+        text/css
+        text/plain
+        text/x-component;
+
+    # Disable gzip for bad browsers
+    gzip_disable  "MSIE [1-6]\.(?!.*SV1)";
 
     # Upstream to abstract backend connection(s) for PHP.
-    #upstream php {
-    #       server unix:/var/run/php5-fpm.sock;
-    #}
+    upstream php {
+           server unix:/var/run/php5-fpm.sock;
+    }
 
-    include /etc/nginx/conf.d/*.conf;
+    # If the requested body size is more than the buffer size, the entire body is
+    # written to a temporary file. Default is 8k or 16k depending on the platform.
+    client_body_buffer_size 16k;
+
+    # If a request line or header field does not fit into this buffer, then larger
+    # buffers via large_client_header_buffers are allocated
+    client_header_buffer_size 1k;
+
+    # Max size of a body to allow. This affects uploads, but can be overwritten at
+    # the individual site level
+    client_max_body_size 50M;
+
+    # The maximum number and size of large headers to accept from a client
+    large_client_header_buffers 4 16k;
+
+	# Include additional configs for various sites. This should be moved to a more
+	# standard place, **cough** sites-available|sites-enabled **cough** at some
+	# point in the near future.
+	include /etc/nginx/conf.d/*.conf;
 
 }
