Tighten up the nginx config for jeremyfelt.com

--- a/config/nginx-config/jeremyfelt.com.conf
+++ b/config/nginx-config/jeremyfelt.com.conf
@@ -1,15 +1,20 @@
+# In a past life, images.jeremyfelt.com was used for all uploaded content in
+# WordPress as well as various image resources used manually. We now redirect
+# any of these requests to the new content.jeremyfelt.com domain accordingly.
 server {
     listen         80;
     server_name    images.jeremyfelt.com;
     rewrite ^      http://content.jeremyfelt.com/images$request_uri? permanent;
 }
 
+# Dig the non www and reroute.
 server {
     listen         80;
     server_name    www.jeremyfelt.com;
     rewrite ^      http://jeremyfelt.com$request_uri? permanent;
 }
 
+# Handle all the main site requests.
 server {
     listen         80;
     server_name    jeremyfelt.com dev.jeremyfelt.com;
@@ -63,15 +68,41 @@ server {
         rewrite ^/[_0-9a-zA-Z-]+(/.*\.php)$ $1 last;
     }
 
-    location ~ \.php$ {
-        client_max_body_size 25M;
-        try_files      $uri =404;
-        fastcgi_pass   unix:/var/run/php5-fpm.sock;
-        fastcgi_index  index.php;
-        include        /etc/nginx/fastcgi_params;
-    }
+	location ~ \.php$ {
+	    # Try the files specified in order. In our case, try the requested URI and if
+	    # that fails, try (successfully) to pass a 404 error.
+	    try_files      $uri =404;
+
+	    # Include the fastcgi_params defaults provided by nginx
+	    include        /etc/nginx/fastcgi_params;
+
+	    # The amount of time for upstream to wait for a fastcgi process to send data.
+	    # We keep this *extremely* high so that one can be lazy when remote debugging.
+		fastcgi_read_timeout 3600s;
+		# PRODUCTION
+		# fastcgi_read_timeout 30s;
+
+	    # Buffer size for reading the header of the backend FastCGI process.
+	    # This defaults to the value of a single fastcgi_buffers, so does not
+	    # need to be specified in our case, but it's good to be explicit.
+		fastcgi_buffer_size 128k;
+
+	    # The number and size of the buffers into which the reply from the FastCGI
+	    # process in the backend is read.
+	    #
+	    # 4 buffers at 128k means that any reply by FastCGI greater than 512k goes
+	    # to disk and replies under 512k are handled directly in memory.
+	    fastcgi_buffers 4 128k;
+
+	    # Use the upstream for php5-fpm that we defined in nginx.conf
+	    fastcgi_pass   php;
+
+	    # And get to serving the file!
+	    fastcgi_index  index.php;
+	}
 }
 
+# Handle any requests at the content domain
 server {
     listen       80;
     server_name  content.jeremyfelt.com dev.content.jeremyfelt.com;
@@ -98,15 +129,41 @@ server {
     # this prevents hidden files (beginning with a period) from being served
     location ~ /\.          { access_log off; log_not_found off; deny all; }
 
-    location ~ \.php$ {
-        client_max_body_size 25M;
-        try_files      $uri =404;
-        fastcgi_pass   unix:/var/run/php5-fpm.sock;
-        fastcgi_index  index.php;
-        include        /etc/nginx/fastcgi_params;
-    }
+	location ~ \.php$ {
+	    # Try the files specified in order. In our case, try the requested URI and if
+	    # that fails, try (successfully) to pass a 404 error.
+	    try_files      $uri =404;
+
+	    # Include the fastcgi_params defaults provided by nginx
+	    include        /etc/nginx/fastcgi_params;
+
+	    # The amount of time for upstream to wait for a fastcgi process to send data.
+	    # We keep this *extremely* high so that one can be lazy when remote debugging.
+		fastcgi_read_timeout 3600s;
+		# PRODUCTION
+		# fastcgi_read_timeout 30s;
+
+	    # Buffer size for reading the header of the backend FastCGI process.
+	    # This defaults to the value of a single fastcgi_buffers, so does not
+	    # need to be specified in our case, but it's good to be explicit.
+		fastcgi_buffer_size 128k;
+
+	    # The number and size of the buffers into which the reply from the FastCGI
+	    # process in the backend is read.
+	    #
+	    # 4 buffers at 128k means that any reply by FastCGI greater than 512k goes
+	    # to disk and replies under 512k are handled directly in memory.
+	    fastcgi_buffers 4 128k;
+
+	    # Use the upstream for php5-fpm that we defined in nginx.conf
+	    fastcgi_pass   php;
+
+	    # And get to serving the file!
+	    fastcgi_index  index.php;
+	}
 }
 
+# Server up the tweets!
 server {
     listen      80;
     server_name tweets.jeremyfelt.com dev.tweets.jeremyfelt.com;
