--- a/config/nginx-config/nginx.conf
+++ b/config/nginx-config/nginx.conf
@@ -9,7 +9,7 @@
 user    www-data;
 
 # Default to number of CPU cores available
-worker_processes  auto;
+worker_processes  4;
 
 # Default error log file
 error_log   /var/log/nginx/error.log;
