Modify the sendfile directive once in production

--- a/config/nginx-config/nginx.conf
+++ b/config/nginx-config/nginx.conf
@@ -33,10 +33,10 @@ http {
     # Default log file
     access_log  /var/log/nginx/access.log;
 
-    # Turn sendfile off in a virtual machine because of issues
-    sendfile off;
+    # Turn off sendfile in a virtual machine because of issues
+	sendfile off;
     # In production, sendfile should be on
-    # sendfile on;
+	# sendfile on;
 
     # Don't send out partial TCP frames
     tcp_nopush          on;
