Add Piwik as a submodule for stats tracking.
This stats implementation tracks a bunch of other sites as well, but needs to be deployed somewhere. Over time this may end up in some kind of master repo rather than as part of jeremyfelt.com

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "content/themes/snap"]
 	path = content/themes/snap
 	url = git@bitbucket.org:jeremyfelt/snap.git
+[submodule "stats"]
+	path = stats
+	url = https://github.com/piwik/piwik.git
