--- a/config/nginx-config/stats.foghlaim.com.conf
+++ b/config/nginx-config/stats.foghlaim.com.conf
@@ -21,10 +21,35 @@ server {
 	location ~ /\.          { access_log off; log_not_found off; deny all; }
 
 	location ~ \.php$ {
-		client_max_body_size 25M;
-		try_files      $uri =404;
-		fastcgi_pass   unix:/var/run/php5-fpm.sock;
-		fastcgi_index  index.php;
-		include        /etc/nginx/fastcgi_params;
+	    # Try the files specified in order. In our case, try the requested URI and if
+	    # that fails, try (successfully) to pass a 404 error.
+	    try_files      $uri =404;
+
+	    # Include the fastcgi_params defaults provided by nginx
+	    include        /etc/nginx/fastcgi_params;
+
+	    # The amount of time for upstream to wait for a fastcgi process to send data.
+	    # We keep this *extremely* high so that one can be lazy when remote debugging.
+		fastcgi_read_timeout 3600s;
+		# PRODUCTION
+		# fastcgi_read_timeout 30s;
+
+	    # Buffer size for reading the header of the backend FastCGI process.
+	    # This defaults to the value of a single fastcgi_buffers, so does not
+	    # need to be specified in our case, but it's good to be explicit.
+		fastcgi_buffer_size 128k;
+
+	    # The number and size of the buffers into which the reply from the FastCGI
+	    # process in the backend is read.
+	    #
+	    # 4 buffers at 128k means that any reply by FastCGI greater than 512k goes
+	    # to disk and replies under 512k are handled directly in memory.
+	    fastcgi_buffers 4 128k;
+
+	    # Use the upstream for php5-fpm that we defined in nginx.conf
+	    fastcgi_pass   php;
+
+	    # And get to serving the file!
+	    fastcgi_index  index.php;
 	}
 }
