--- a/config/postfix-config/main.cnf
+++ b/config/postfix-config/main.cnf
@@ -25,7 +25,16 @@ smtp_tls_session_cache_database = btree:${data_directory}/smtp_scache
 
 # See /usr/share/doc/postfix/TLS_README.gz in the postfix-doc package for
 # information on enabling SSL in the smtp client.
-myhostname = foghlaim.com
+
+# INTERNET HOST AND DOMAIN NAMES
+#
+# Internet hostname of this system. Used as a default value for other
+# configuraiton parameters.
+myhostname = mail.foghlaim.com
+
+# Used as a default value for other configuration parameters
+mydomain = foghlaim.com
+
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 myorigin = /etc/mailname
