--- a/config/postfix-config/main.cnf
+++ b/config/postfix-config/main.cnf
@@ -52,11 +52,22 @@ inet_interfaces = all
 # destination for.
 mydestination = foghlaim.com, FOGHLAIMLinode, localhost.localdomain, localhost
 
+# TRUST
+#
+# By default, Postfix trusts any machines that are on the same subnet as
+# this machine. This *could* end up weird on a VPS as we're sharing an IP
+# range with a bunch of others.
+mynetworks_style = host
+
+# Of course, this directive explicitly limits mail to the current network,
+# overrideing our mynetworks_style directive, but I like being explicit.
+mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
+
 alias_maps = hash:/etc/aliases
 alias_database = hash:/etc/aliases
 
 relayhost =
-mynetworks = 127.0.0.0/8 [::ffff:127.0.0.0]/104 [::1]/128
+
 mailbox_size_limit = 0
 recipient_delimiter = +
 
