--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "content/themes/snap"]
 	path = content/themes/snap
 	url = git@bitbucket.org:jeremyfelt/snap.git
+[submodule "content/plugins/frequent-auto-update-scheduler"]
+	path = content/plugins/frequent-auto-update-scheduler
+	url = git@github.com:jeremyfelt/Frequent-Auto-Update-Scheduler.git
