--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "www/wordpress"]
 	path = www/wordpress
-	url = https://github.com/WordPress/WordPress.git
+	url = git://core.git.wordpress.org/
 [submodule "tweets"]
 	path = tweets
 	url = git@github.com:jeremyfelt/tweets.jeremyfelt.com.git
