Add LoopConf deploy to fabfile, track commits

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tweets"]
 	path = tweets
 	url = git@github.com:jeremyfelt/tweets.jeremyfelt.com.git
+[submodule "loopconf"]
+	path = loopconf
+	url = git@github.com:jeremyfelt/2015-loopconf.git
