--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "loopconf"]
 	path = loopconf
 	url = git@github.com:jeremyfelt/2015-loopconf.git
+[submodule "wceu-2016"]
+	path = wceu-2016
+	url = git@github.com:jeremyfelt/Multisite-Talk.git
