Move WordPress to root directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "www/wordpress"]
-	path = www/wordpress
+	path = wordpress
 	url = git://core.git.wordpress.org/
 [submodule "tweets"]
 	path = sub-site/tweets
