--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode/
+
 # Root WordPress files.
 /index.php
 /license.txt
@@ -12,7 +14,16 @@
 # Specific pieces of wp-content directory.
 /wp-content/uploads
 /wp-content/images
+
+# Plugins under local development
+/wp-content/plugins/alternate-editor
+/wp-content/plugins/block-use-dashboard
+/wp-content/plugins/comments-project
+/wp-content/plugins/jeremyfelt-indieweb-custom
+/wp-content/plugins/jeremyfelt-wp-custom
 /wp-content/plugins/self-sustaining-spam-stopper
+
+# Themes under local development
 /wp-content/themes/writemore
 
 # Backups that may frequently appear locally.
