--- a/.deploy_ignore
+++ b/.deploy_ignore
@@ -1,6 +1,18 @@
 .deploy_ignore
 *.git*
 
+# WordPress.org managed plugins.
+batcache
+koko-analytics
+query-monitor
+public-post-preview
+safe-redirect-manager
+rewrite-rules-inspector
+gutenberg
+indieweb
+simple-location
+syntax-highlighting-code-block
+
 # Locally managed plugins.
 block-use-dashboard
 comments-project
@@ -9,3 +21,4 @@ jeremyfelt-wp-custom
 dalarna
 self-sustaining-spam-stopper
 varmland
+microformat-blocks
