Update deployignore, gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -19,21 +19,10 @@
 /wp-content/mu-plugins/jf-local.php
 
 # Plugins from plugin repository
-/wp-content/plugins/content-visibility
-/wp-content/plugins/latest-custom-posts
-/wp-content/plugins/simple-location
-/wp-content/plugins/semantic-linkbacks
-/wp-content/plugins/syntax-highlighting-code-block
+/wp-content/plugins
 
-# Plugins under local development
-/wp-content/plugins/block-use-dashboard
-/wp-content/plugins/comments-project
-/wp-content/plugins/jeremyfelt-indieweb-custom
-/wp-content/plugins/jeremyfelt-wp-custom
-/wp-content/plugins/dalarna
-/wp-content/plugins/self-sustaining-spam-stopper
-/wp-content/plugins/varmland
-/wp-content/plugins/microformat-blocks
+!/wp-content/plugins/WSUWP-Content-Syndicate-0.8.3
+!/wp-content/index.php
 
 # Ignore all themes
 /wp-content/themes
