--- a/.deploy_ignore
+++ b/.deploy_ignore
@@ -1,12 +1,17 @@
 .deploy_ignore
-*.git*
-
-# Locally managed plugins.
-block-use-dashboard
-comments-project
-jeremyfelt-indieweb-custom
-jeremyfelt-wp-custom
-dalarna
-self-sustaining-spam-stopper
-varmland
-microformat-blocks
+.deploy_include
+.git
+.github/
+.gitignore
+.gitmodules
+bin/
+config/
+composer.json
+composer.lock
+README.md
+images/
+slides/
+sub-site/
+themes/
+uploads/
+vendor/
