Ignore upgrade and well-known directories on deploy

--- a/.deploy_ignore
+++ b/.deploy_ignore
@@ -4,6 +4,7 @@
 .github/
 .gitignore
 .gitmodules
+.well-known/
 bin/
 config/
 composer.json
@@ -14,4 +15,5 @@ slides/
 sub-site/
 themes/
 uploads/
+upgrade/
 vendor/
