--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
 		"happyprime/shadow-terms": "1.0.1",
 		"wpackagist-plugin/shortnotes": "^1.3",
 		"wpackagist-plugin/syntax-highlighting-code-block": "^1.3",
-		"wpackagist-plugin/webmention": "^4.0"
+		"wpackagist-plugin/webmention": "^4.0",
+		"wpackagist-plugin/share-on-mastodon": "^0.6.4"
 	},
 	"require-dev": {
 		"wp-coding-standards/wpcs": "^2.0",
